Adiciona suporte a depuração no projeto, incluindo novos scripts no package.json, configurações de TypeScript e arquivos de configuração do VSCode. Implementa logging de depuração na API de tarefas e ajusta a estrutura de dados das tarefas.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:debug": "GENERATE_SOURCEMAP=true react-scripts start",
     "build": "react-scripts build",
+    "build:debug": "GENERATE_SOURCEMAP=true react-scripts build",
     "test": "react-scripts test",
+    "test:debug": "react-scripts test --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
